[gd_scene load_steps=5 format=3 uid="uid://bhmdobeuhceae"]

[ext_resource type="Texture2D" uid="uid://d1jyq6h51ma0r" path="res://Assets/Images/Animals/Giraffe.png" id="1_om4de"]
[ext_resource type="Script" path="res://Scripts/UI/AssetCard.gd" id="1_y8jg7"]
[ext_resource type="Texture2D" uid="uid://dudnowk2glm6g" path="res://Assets/Images/UI/AssetLocked.png" id="2_yq6aa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_upab2"]

[node name="AssetCard" type="Control"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y8jg7")

[node name="AssetVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="AssetImage" type="TextureRect" parent="AssetVBox"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_om4de")
expand_mode = 5

[node name="LockedOverlay" type="TextureRect" parent="AssetVBox/AssetImage"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_yq6aa")
expand_mode = 5
stretch_mode = 4

[node name="AssetNameLabel" type="Label" parent="AssetVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_font_sizes/font_size = 30
text = "Asset Name"
horizontal_alignment = 1

[node name="AssetValueLabel" type="Label" parent="AssetVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.203922, 0.258824, 0.345098, 1)
theme_override_font_sizes/font_size = 30
text = "$0"
horizontal_alignment = 1

[node name="HitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_upab2")
flat = true
